[metadata]
name = zhinst-qcodes
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments drivers for QCoDeS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhinst/zhinst-qcodes
project_urls =
    Bug Tracker = https://github.com/zhinst/zhinst-qcodes/issues
    Documentation = https://docs.zhinst.com/zhinst-qcodes/en/latest/
    Release notes = https://docs.zhinst.com/zhinst-qcodes/en/latest/changelog/index.html
    Source = https://github.com/zhinst/zhinst-qcodes

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
use_scm_version = True
install_requires =
    numpy>=1.13
    zhinst-toolkit>=0.5.0
    qcodes>=0.30.0
    typing_extensions>=4.1.1

include_package_data = True

[options.packages.find]
where = src
include = zhinst.*

[flake8]
max-line-length = 88
ignore =
    # Line break before binary operator (conflicts with black)
    W503,
    # Missing docstring in __init__ (Dostring in class definition.)
    D107,
    # Missing docstring in magic method
    D105,
exclude =
    .git,
    .tox
    __pycache__,
    .ipynb_checkpoints,
    tests
    venv*
    build
    docs
    examples
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401
docstring-convention=google

[mypy]
ignore_missing_imports = True
show_error_codes = True
